# cocos-example-projects

./: .gitignore  README.md  project.json
SponzaV01/: package.json
assets/: camera.js  geometries.js  pbr.fire  pbr.mtl  phong.fire  primitives.fire  sky.js  test.effect  test.fire  unlit.mtl
assets/effects/: dev.effect  test.effect
assets/materials/: corset.mtl  dev.effect  pbr.mtl  phong.mtl  redBall.mtl  test.effect
assets/scenes/: anim.fire  audio.scene  pbr.fire  pbr.scene  phong.fire  phong.scene  shadows.fire  shadows.scene  sofa.fire
assets/scripts/: camera.js  geometries.js  redBall.js  sky.js
demo01/: package.json
demo01/assets/: New Scene.scene  effect-compare-unity.scene
demo02/: package.json
demo02/assets/: another.scene  test.scene
demo03/: hello-3d.code-workspace  package.json
demo03/assets/: hexagon.scene
falling-ball/: package.json
falling-ball/assets/: PhysicsEnvCheck.ts  main.scene  start.scene
native-plugin/: .gitignore  README.md  package.json
native-plugin/assets/: Demo.d.ts  HelloNative.ts  scene.scene
native-plugin/native/plugins/hello_cocos/src/: CMakeLists.txt  hello_cocos-glue.cpp
native-script-bridge/: README-jsbBridgeWrapper.md  README.md  basicUsage.md  extensionUsage.md  package.json
native-script-bridge/native/engine/android/: CMakeLists.txt  build.gradle
native-script-bridge/native/engine/android/app/: AndroidManifest.xml  build.gradle
native-script-bridge/native/engine/android/app/src/com/cocos/game/: AppActivity.java  AutoGenerator.java  JsbBridgeTest.java
native-script-bridge/native/engine/android/instantapp/: AndroidManifest.xml  build.gradle
native-script-bridge/native/engine/android/res/values/: strings.xml
native-script-bridge/native/engine/ios/: AppDelegate.mm  CMakeLists.txt  JsbBridgeTest.h  JsbBridgeTest.mm  MyIOSPlatform.h  MyIOSPlatform.mm  main.mm
native-script-bridge/native/engine/mac/: AppDelegate.mm  CMakeLists.txt  JsbBridgeTest.h  JsbBridgeTest.mm  MyMacPlatform.h  MyMacPlatform.mm  main.mm
npm-case/: .gitignore  README.md  README.zh.md  import-map.json  package-lock.json  package.json  tsconfig.json
npm-case/@types/: jszip.d.ts
npm-case/Proto/: awesome.proto  pkg1.proto  pkg2.proto  unpkg.proto
npm-case/Tools/: auto-gen-scripts.js  clear-proto.js  wrap-pbts-result.js  wrapper-es6.js
npm-case/assets/: Test.ts  scene.scene
occlusion-query/: package.json
physics-3d/: .gitignore  README.md  package.json  tsconfig.json
physics-3d/assets/: TestList.scene  sweep.terrain
physics-3d/preview-template/: index.ejs
physics-3d/types/: Ammo.d.ts  CANNON.d.ts
physics-benchmark/: .gitignore  ReadMe.md  package.json
planar-reflection/: package.json
protobuf/: README.md  package.json
roll-a-ball/: .gitignore  package.json
show-cases/: cocos3d-js.min.js  index.html  main.js  package.json  tsconfig.json
simple-car-game/: package.json
simple-fps/: package.json
simple-games/: package.json
simple-hole/: package.json
simple-physics/: package.json  tsconfig.json
wx-open-data-project/: package.json
(+1825 files in other folders)
